@@ -1,16 +1,0 @@
-'unittests':
-  script:
-    - composer install --prefer-dist
-    - ./vendor/bin/phpunit --colors=never --coverage-text --configuration phpunit.xml
-  tags:
-    - php7.1
-  except:
-    - tags
-
-'phpcs':
-  script:
-    - sh ./phpcs/phpcs.sh
-  tags:
-    - php7.1
-  except:
-    - tags
