@@ -4,6 +4,9 @@ namespace meteocontrol\client\vcomapi;
 
 class Config {
 
+    /** @var string */
+    private static $tokenAccessDir;
+
     /** @var array */
     private $config = [];
 
@@ -16,10 +19,18 @@ class Config {
         'API_AUTH_MODE'
     ];
 
+    /** @var callable */
+    private $tokenRefreshCallable;
+
+    /** @var callable */
+    private $tokenAccessCallable;
+
     /**
      * @param string $path
      */
     public function __construct($path = '') {
+        self::$tokenAccessDir = __DIR__ . '/../.tokenAccess/';
+
         if (!$path) {
             $path = __DIR__ . '/../config.ini';
         }
@@ -99,6 +110,41 @@ class Config {
     }
 
     /**
+     * @return callable|null
+     */
+    public function getTokenRefreshCallable() {
+        return $this->tokenRefreshCallable;
+    }
+
+    /**
+     * @param callable $tokenRefreshCallable
+     */
+    public function setTokenRefreshCallable(callable $tokenRefreshCallable) {
+        $this->tokenRefreshCallable = $tokenRefreshCallable;
+    }
+
+    /**
+     * @return callable|null
+     */
+    public function getTokenAccessCallable() {
+        return $this->tokenAccessCallable;
+    }
+
+    /**
+     * @param callable $tokenAccessCallable
+     */
+    public function setTokenAccessCallable(callable $tokenAccessCallable) {
+        $this->tokenAccessCallable = $tokenAccessCallable;
+    }
+
+    public function deleteTokenAccessFile() {
+        $filename = $this->getTokenAccessFilename();
+        if (file_exists(self::$tokenAccessDir . $filename)) {
+            unlink(self::$tokenAccessDir . $filename);
+        }
+    }
+
+    /**
      * @throws \InvalidArgumentException
      */
     public function validate() {
@@ -116,6 +162,29 @@ class Config {
             throw new \InvalidArgumentException("config file '$path' not found");
         }
         $this->config = parse_ini_file($path);
+
+        $this->setTokenRefreshCallable(function ($credentials) {
+            self::createTokenDir();
+            $credentials = [
+                'access_token' => $credentials['access_token'],
+                'refresh_token' => $credentials['refresh_token'],
+            ];
+            file_put_contents(
+                self::$tokenAccessDir . $this->getTokenAccessFilename(),
+                base64_encode(json_encode($credentials))
+            );
+        });
+
+        $this->setTokenAccessCallable(function () {
+            $filename = $this->getTokenAccessFilename();
+            if (!file_exists(self::$tokenAccessDir . $filename)) {
+                return false;
+            }
+            return json_decode(base64_decode(
+                file_get_contents(self::$tokenAccessDir . $filename)
+            ), true);
+        });
+
         $this->validate();
     }
 
@@ -141,5 +210,18 @@ class Config {
                 );
             }
         }
+    }
+
+    /**
+     * @return string
+     */
+    private function getTokenAccessFilename() {
+        return md5($this->getApiUsername() . $this->getApiPassword());
+    }
+
+    private static function createTokenDir() {
+        !is_dir(self::$tokenAccessDir) &&
+        !mkdir(self::$tokenAccessDir) &&
+        !is_dir(self::$tokenAccessDir);
     }
 }
